@@ -11392,17 +11392,21 @@ void ONMainWindow::printSshDError_noHostPubKey()
 {
     if ( closeEventSent )
         return;
-    QMessageBox::critical ( 0l,tr ( "SSH Error" ),
-                            tr ( "SSH daemon failed to open the its public host key.\n\n"
+    Non_Modal_MessageBox::critical (0l, tr ( "SSH Error" ),
+                                    tr ("SSH daemon failed to open its public host key.\n\n"
 
-                                 "You have enabled Remote Printing or File Sharing.\n"
-                                 "These features require a running and functioning SSH server on your computer.\n\n"
-                                 "The Server is currently not configured correctly.\n\n"
-                                 "Please ensure that the server's public exists.\n"
-                                 "Host keys can be generated by running:\n\n"
-                                 "\tsudo ssh-keygen -A"
-                               ),
-                            QMessageBox::Ok, QMessageBox::NoButton );
+                                        "You have enabled Remote Printing or File Sharing.\n"
+                                        "These features require a running and functioning SSH server on your computer.\n\n"
+
+                                        "The Server is currently not configured correctly.\n\n"
+
+                                        "Please ensure that the server's public exists.\n"
+                                        "Host keys can be generated by running:\n\n"
+
+                                        "\tsudo ssh-keygen -A\n\n"
+
+                                        "Disabling Remote Printing or File Sharing support will get rid of this message."),
+                                    QMessageBox::Ok, QMessageBox::NoButton);
 }
 
 void ONMainWindow::printSshDError_noExportPubKey()
